Refactor and fix errors in the sliding pieces attack checking.